# DC-Django

backend/: db.sqlite3  pyproject.toml
backend/backend/: settings.py  urls.py
backend/main/: admin.py  models.py  urls.py  views.py
backend/main/migrations/: 0001_initial.py  0002_episode_views_alter_anime_views.py  0003_remove_episode_views.py  0004_remove_comment_for_episode_anime_comments_and_more.py
backend/templates/: anime-details.html  anime-watching.html  base.html  index.html  recently_added.html  search.html  trending.html
