[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["A-N-I-M-E-D-E-V <adamconores@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
